--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>My Class Menu</title>
+  <title>課表</title>
 
   <link rel="shortcut icon" type="image/png" href="./favicon.ico" />
   <link href="./assest/materialize/css/materialize.icon.css" rel="stylesheet">
